Temporary commit to backup with new tests and entities

--- a/BioDiagnostics.Data.MongoDb/BioDiagnostics.Data.MongoDb.csproj
+++ b/BioDiagnostics.Data.MongoDb/BioDiagnostics.Data.MongoDb.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\BioDiagnostics.Data\BioDiagnostics.Data.csproj" />    
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="BioDiagnostics.Data.MongoDb.Tests" />
+  </ItemGroup>
+
 </Project>
