--- a/BioDiagnostics.Data.MongoDb.Tests/BioDiagnostics.Data.MongoDb.Tests.csproj
+++ b/BioDiagnostics.Data.MongoDb.Tests/BioDiagnostics.Data.MongoDb.Tests.csproj
@@ -25,4 +25,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\biodiagnostics.requestToBeReviewed.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
